src/objects/ADvendio__ImportExportMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ADvendio__AdvertisementsFieldNotation__c</fullName>
        <label>Advertisements Field Notation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__OfferFieldNotation__c</fullName>
        <label>Offer Field Notation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PlacementsFieldNotation__c</fullName>
        <label>Placements Field Notation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricelistFieldNotation__c</fullName>
        <label>Pricelist Field Notation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ImportExportMapping</label>
</CustomObject>